syntax = "proto3";
package ujds.index.v1;
option go_package = "github.com/ashep/ujds/sdk/proto/ujds/index/v1";

message ListRequest {
}

message ListResponse {
  message Index {
    string name = 1 ;
  }

  repeated Index indices = 1;
}

message PushRequest {
  string name = 1;
  string schema = 2;
}

message PushResponse {
}

message GetRequest {
  string name = 1;
}

message GetResponse {
  string name = 1;
  uint64 created_at = 2;
  uint64 updated_at = 3;
  string schema = 4;
}

message ClearRequest {
  string name = 1;
}

message ClearResponse {
}

service IndexService {
  rpc Push(PushRequest) returns (PushResponse) {}
  rpc Get(GetRequest) returns (GetResponse) {}
  rpc List(ListRequest) returns(ListResponse) {}
  rpc Clear(ClearRequest) returns (ClearResponse) {}
}
